--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<div class="content">
+<div class="contentBlock">
 
 <h1>Bitcoin Cash Node WebUI</h1>
 
@@ -47,8 +47,7 @@
 <span class="col1" id="Connections">&hellip;</span>
 </div>
 
-<div class="field error" id="Errors"></div>
-
+<div class="error" id="Errors"></div>
 
 <h2>Network Usage</h2>
 
@@ -76,6 +75,7 @@
 <span class="col1" id="CurrentDownstream">&hellip;</span>
 </div>
 
+</div>
 
 <div class="chart">
 <span id="UploadRateChartMax"></span>
@@ -90,6 +90,8 @@
 
 <h2>Connections</h2>
 
+<div class="contentBlock">
+
 <table>
 <thead>
 <tr>
@@ -101,6 +103,7 @@
 </table>
 
 </div>
+
 
 <script src="script.js"></script>
 
